--- a/lab1/pages/contacts.html
+++ b/lab1/pages/contacts.html
@@ -18,7 +18,7 @@
                         <a class="nav-link active" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="description.html">Description</a>
+                        <a class="nav-link" href="download.html">Download</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="feedback.html">Feedback</a>
@@ -36,12 +36,11 @@
                                 alt="" width="130"></h1>
                     </div>
                     <div class="content">
-                        <div class="main-info">
-                            <p>Make your computer <br> better <br> </p>
-                            ViOS is the alternative to Windows, macOS and another linux distros designed to make your computer faster, more
-                            powerful, secure, and privacy respecting.
+                        <div class="contacts-info">
+                            <p>Contacts</p>
+                            E-mail: vios@gmail.com <br>
+                            Github: <a href="https://github.com/darthhater101"> ViOS </a>
                         </div>
-                        <div class="main-image"><img src="../images/desktop.jpg" alt="" width="500"></div>
                     </div>
                     <div class="extra">
                         <div class="first">
