--- a/lab1/pages/download.html
+++ b/lab1/pages/download.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 
 <body>
@@ -15,16 +15,16 @@
             <div class="col-md-1">
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item">
-                        <a class="nav-link active" href="index.html">Home</a>
+                        <a class="nav-link active" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pages/download.html">Download</a>
+                        <a class="nav-link" href="download.html">Download</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pages/feedback.html">Feedback</a>
+                        <a class="nav-link" href="feedback.html">Feedback</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pages/contacts.html">Contacts</a>
+                        <a class="nav-link" href="contacts.html">Contacts</a>
                     </li>
                 </ul>
             </div>
@@ -32,30 +32,30 @@
                 <div class="container-fluid">
                     <div class="page-header">
                         <h1>ViOS <img
-                                src="images/kisspng-arch-linux-linux-distribution-installation-tux-armbian-5b3b77662f78d4.9157926415306238461945.png"
+                                src="../images/kisspng-arch-linux-linux-distribution-installation-tux-armbian-5b3b77662f78d4.9157926415306238461945.png"
                                 alt="" width="130"></h1>
                     </div>
                     <div class="content">
-                        <div class="main-info">
-                            <p>Make your computer <br> better <br> </p>
-                            ViOS is the alternative to Windows, macOS and another linux distros designed to make your
-                            computer faster, more
-                            powerful, secure, and privacy respecting.
+                        <div class="example1">
+                            <img src="../images/example1.png" alt="" width="500">
                         </div>
-                        <div class="main-image"><img src="images/desktop.jpg" alt="" width="500"></div>
+                        <div class="example2">
+                            <img src="../images/example2.jpg" alt="" width="500">
+                        </div>
+                        <button type="submit" class="btn btn-primary btn-lg">Download</button>
                     </div>
                     <div class="extra">
                         <div class="first">
-                            <img src="images/pngkey.com-forbes-logo-png-424235.png" alt="" width="130">
+                            <img src="../images/pngkey.com-forbes-logo-png-424235.png" alt="" width="130">
                             <p>“ViOS is different… a beautiful and powerful operating system.”</p>
                         </div>
                         <div class="second">
-                            <img src="images/pngwave.png" alt="" width="130">
+                            <img src="../images/pngwave.png" alt="" width="130">
                             <p>“I've found myself more productive these past <br> weeks [using ViOS] than in
                                 the last two months combined.”</p>
                         </div>
                         <div class="third">
-                            <img src="images/Ars_Technica_logo_(2016).svg.png" alt="" width="130">
+                            <img src="../images/Ars_Technica_logo_(2016).svg.png" alt="" width="130">
                             <p>“Gets out of the way and lets you focus on what <br> you need to get done.”</p>
                         </div>
                     </div>
