--- a/lab1/pages/feedback.html
+++ b/lab1/pages/feedback.html
@@ -18,7 +18,7 @@
                         <a class="nav-link active" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="description.html">Description</a>
+                        <a class="nav-link" href="download.html">Download</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="feedback.html">Feedback</a>
@@ -35,13 +35,18 @@
                                 src="../images/kisspng-arch-linux-linux-distribution-installation-tux-armbian-5b3b77662f78d4.9157926415306238461945.png"
                                 alt="" width="130"></h1>
                     </div>
-                    <div class="content">
-                        <div class="main-info">
-                            <p>Make your computer <br> better <br> </p>
-                            ViOS is the alternative to Windows, macOS and another linux distros designed to make your computer faster, more
-                            powerful, secure, and privacy respecting.
-                        </div>
-                        <div class="main-image"><img src="../images/desktop.jpg" alt="" width="500"></div>
+                    <div class="feedback">
+                        <form>
+                            <div class="form-group">
+                              <label for="exampleInputEmail1">Name</label>
+                              <input class="form-control form-control-lg" type="text" placeholder="Your name">
+                            </div>
+                            <div class="form-group">
+                              <label for="exampleInputPassword1">Feedback</label>
+                              <textarea class="form-control" rows="5" placeholder="Your name"></textarea>
+                            </div>
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                          </form>
                     </div>
                     <div class="extra">
                         <div class="first">
