--- a/lab2/index.html
+++ b/lab2/index.html
@@ -8,7 +8,8 @@
 
 <body>
     <div id="content">
-        <div id="list"></div>
+        <div id="list">
+        </div>
         <button id="add-button"> Add Account </button>
     </div>
     <script type="module" src="js/main.js"></script>
